--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<!DOCTYPE html>
+<html>
+  <head>
+  <meta charset="UTF=8">
   <title>Nevermore: The Edgar Allan Poe Depot</title>
 </head>
+  
+  <body>
+    <h1>He Did Wha!?</h1>
+    
+    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Edgar_Allan_Poe.jpg" alt="Cheery Fellow Edgar" style="width:auto">
+    
+    <nav>
+      <a href="https://en.wikipedia.org/wiki/Edgar_Allan_Poe">About_Edgar</a>
+    </nav>
+  
+  </body>
+</html>
+
+
