Nevermore The Edgar Allan Poe Depot

--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
 </head>
   
   <body>
-    <h1>He Did Wha!?</h1>
-    
-    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Edgar_Allan_Poe.jpg" alt="Cheery Fellow Edgar" style="width:auto">
+    <h1>Nevermore: The Edgar Allan Poe Depot</h1>
+   <figure>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Edgar_Allan_Poe.jpg" alt="Cheery Fellow Edgar" style="width:340px; height:550px;">
+         <figcaption>He's putting on a smile just for you</figcaption>
+    </figure> 
     
     <nav>
       <a href="https://en.wikipedia.org/wiki/Edgar_Allan_Poe">About_Edgar</a>
     </nav>
-  
+  <article>
+    <p> Was he a genius or a madman? Perhaps a little bit of both. It could be argued that we all possess a little bit of this and a little bit of that from time to time. Edgar, however, had a claim on more than his fair share</p></article>
+    <aside>
+      <h2>Early Life</h2>
+      <p>Where it all began</p>
+    </aside>
   </body>
 </html>
 
