--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <h2>Meetups</h2>
       <p>Have a tell tale heart? Want to meet like-minded Poe-ians?  Join your local Meetup.</p>
        <a href="http://www.meetup.com">Visit Meetup</a>
+      <p>My Name is Sara</p>
     </aside>
   </body>
 </html>
